--- a/lgbtconnection/package.json
+++ b/lgbtconnection/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.1",
   "description": "lgbtconnection: An Ionic project",
   "dependencies": {
+    "angular": "^1.6.4",
     "angularfire": "^2.3.0",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
