--- a/lgbtconnection/www/lib/angular/package.json
+++ b/lgbtconnection/www/lib/angular/package.json
@@ -1,25 +1,95 @@
 {
-  "name": "angular",
-  "version": "1.5.3",
+  "_args": [
+    [
+      {
+        "raw": "angular@^1.6.4",
+        "scope": null,
+        "escapedName": "angular",
+        "name": "angular",
+        "rawSpec": "^1.6.4",
+        "spec": ">=1.6.4 <2.0.0",
+        "type": "range"
+      },
+      "E:\\LGBT Connection\\lgbtconnection\\lgbtconnection"
+    ]
+  ],
+  "_from": "angular@>=1.6.4 <2.0.0",
+  "_id": "angular@1.6.4",
+  "_inCache": true,
+  "_location": "/angular",
+  "_nodeVersion": "6.10.1",
+  "_npmOperationalInternal": {
+    "host": "packages-18-east.internal.npmjs.com",
+    "tmp": "tmp/angular-1.6.4.tgz_1490952716144_0.26542595587670803"
+  },
+  "_npmUser": {
+    "name": "angularcore",
+    "email": "angular-core+npm@google.com"
+  },
+  "_npmVersion": "3.10.10",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "angular@^1.6.4",
+    "scope": null,
+    "escapedName": "angular",
+    "name": "angular",
+    "rawSpec": "^1.6.4",
+    "spec": ">=1.6.4 <2.0.0",
+    "type": "range"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/angular/-/angular-1.6.4.tgz",
+  "_shasum": "03b7b15c01a0802d7e2cf593240e604054dc77fb",
+  "_shrinkwrap": null,
+  "_spec": "angular@^1.6.4",
+  "_where": "E:\\LGBT Connection\\lgbtconnection\\lgbtconnection",
+  "author": {
+    "name": "Angular Core Team",
+    "email": "angular-core+npm@google.com"
+  },
+  "bugs": {
+    "url": "https://github.com/angular/angular.js/issues"
+  },
+  "dependencies": {},
   "description": "HTML enhanced for web apps",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {},
+  "directories": {},
+  "dist": {
+    "shasum": "03b7b15c01a0802d7e2cf593240e604054dc77fb",
+    "tarball": "https://registry.npmjs.org/angular/-/angular-1.6.4.tgz"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/angular/angular.js.git"
-  },
+  "gitHead": "097304875bf47c499c7a45711e28f16937dfacfd",
+  "homepage": "http://angularjs.org",
   "keywords": [
     "angular",
     "framework",
     "browser",
     "client-side"
   ],
-  "author": "Angular Core Team <angular-core+npm@google.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/angular/angular.js/issues"
+  "main": "index.js",
+  "maintainers": [
+    {
+      "name": "angularcore",
+      "email": "angular-core+npm@google.com"
+    },
+    {
+      "name": "petebd",
+      "email": "pete@bacondarwin.com"
+    }
+  ],
+  "name": "angular",
+  "optionalDependencies": {},
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/angular/angular.js.git"
   },
-  "homepage": "http://angularjs.org"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "version": "1.6.4"
 }
